languages/LanguageA/examples/class/class06.la
program class06

// error: cyclic inheritance

class Foo extends Bar {
	Num x;
}

class Bar extends Foo {
	Num y;
}

run

  new Foo()